23/03 Update and win percentage for the decks

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                     <th>Commander</th>
                     <th>Colours</th>
                     <th>Combinations</th>
+                    <th>Matches Played</th>
                     <th>Wins</th>
+                    <th>Win Percentage</th>
                     <th>Image</th>
                     <th>Active</th>
                 </tr>
