Fix for the Doubled Sided cards

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section>
         <h2 style="text-align: center;">Decks Played</h2>
-        <!-- <button id="toggle-inactive-decks">Toggle Inactive Decks</button> -->
+        <button id="toggle-inactive-decks">Hide Inactive Decks</button>
         <table>
             <thead>
                 <tr>
