Sorting on the Decks played

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <th>Commander</th>
                     <th>Colours</th>
                     <th>Combinations</th>
-                    <th>Matches Played</th>
-                    <th>Wins</th>
-                    <th>Win Percentage</th>
+                    <th id="sort-wins" style="cursor:pointer;">Wins <span id="arrow-wins">↕</span></th>
+                    <th id="sort-matches" style="cursor:pointer;">Matches Played <span id="arrow-matches">↕</span></th>
+                    <th id="sort-winrate" style="cursor:pointer;">Win Percentage <span id="arrow-winrate">↕</span></th>
                     <th>Image</th>
                     <th>Active</th>
                 </tr>
